fix button colors, spacing, card height, fade out on cards

--- a/front_end/src/app/child-checkin/child-checkin.component.scss
+++ b/front_end/src/app/child-checkin/child-checkin.component.scss
@@ -9,4 +9,5 @@
 
 .btn-primary {
   background: $brand-primary;
+  color: #fff;
 }
